--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-PORT =8081
-DEV_MODE =development
-MONGO_URL=mongodb://localhost:27017/Plasma_donor
-JWT_SECRET=shubham@6260
+REACT_APP_BASEURL=http://localhost:8081/api/v1
